Fixed some errors

--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -63,7 +63,7 @@
                     numTeamGroups++;
                 }
                 else{
-                    $('<div class="teamTables "+(numTeamGroups)+" ondrop="drop(event)" ondragover="allowDrop(event)"></div>').insertBefore($("#teamAdd"));
+                    $('<div class="teamTables '+(numTeamGroups)+'" ondrop="drop(event)" ondragover="allowDrop(event)"></div>').insertBefore($("#teamAdd"));
                     numTeamGroups++;
                 }
             })
