Created About, ContactUS and changed css

--- a/src/public/style/css.css
+++ b/src/public/style/css.css
@@ -79,7 +79,10 @@ hr:before {
     position:relative;
     top:70px;
 }
-
+.signin {
+    border: solid #000000; border-width: 0 1px;
+    position: relative;
+}
 .submits{
     text-align: right;
 }
@@ -88,10 +91,7 @@ hr:before {
     font-size: 15px;
 }
 
-.signin {
-    border: solid #000000; border-width: 0 1px;
-    position: relative;
-}
+
 
 BODY:last-child .signin {
     border: none;
@@ -220,8 +220,10 @@ footer
 {
     background-color: #eee;
     height: auto;
+    width: 100%;
+    position: fixed;
     bottom: 0;
-    margin:0;
+    margin:auto;
     padding:5px;
     vertical-align:middle;
     border-top: 1px solid #e6e6e6;
@@ -305,4 +307,24 @@ td#tableMenu {
 }
 #demoDiv {
     text-align: left;
+}
+
+.aboutWrapper{
+    position:relative;
+    top:70px;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.aboutUsText {
+    position: relative;
+}
+.contactWrapper{
+    position:relative;
+    top:70px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 30%;
+    font-family: OpenSans;
+
 }
