--- a/src/views/index.html
+++ b/src/views/index.html
@@ -98,7 +98,7 @@
                 <th id="tableMenu"><input id="aboutButton" type="text" value="About"
                                           onclick="window.location='/about';" /></th>
                 <th id="tableMenu"><input id="contactButton" type="text" value="Contact Us"
-                                          onclick="window.location='/constact';" /></th>
+                                          onclick="window.location='/contact';" /></th>
             </tr>
         </table>
     </div>
