Changed AboutUs to enable user to download UserManual.   Still Buggy

--- a/src/views/aboutUs.html
+++ b/src/views/aboutUs.html
@@ -35,6 +35,14 @@
                 If you don't know if this system is the right one for you, click on see how it works
                 at the top of this page for a demo on how this system can help you.
             </p>
+
+            <h3> <u>User manual</u></h3>
+            <p>
+                Download our User manual here.
+            </p>
+            <p>
+                <a href="UserManual.pdf" download>Download the pdf</a>
+            </p>
         </div>
     </div>
 </div>
