Added functionality to download the User Manual as a pdf

--- a/src/views/aboutUs.html
+++ b/src/views/aboutUs.html
@@ -41,7 +41,7 @@
                 Download our User manual here.
             </p>
             <p>
-                <a href="UserManual.pdf" download>Download the pdf</a>
+                <a href="PDF/UserManual.pdf" download>Download the pdf</a>
             </p>
         </div>
     </div>
