--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -8,183 +8,10 @@
     <link rel="stylesheet" href="APIs/jquery-ui-1.11.4.custom/jquery-ui.min.css">
     <script src="APIs/jquery-ui-1.11.4.custom/external/jquery/jquery.js"></script>
     <script src="APIs/jquery-ui-1.11.4.custom/jquery-ui.min.js"></script>
+    <script src="scripts/teamSetupJS.js"></script>
     <link rel="stylesheet" href="style/css.css">
 
     <script src="scripts/algorithm.js"></script>
-
-    <style>
-        section {
-            width: 80%;
-                height: 500px;
-                background:#333;
-                margin: auto;
-                padding: 10px;
-            }
-
-        .minusButton{
-            float:right;
-            opacity: 0;
-
-            -webkit-transition: opacity 0.5s ease-in-out;
-            -moz-transition: opacity 0.5s ease-in-out;
-            -ms-transition: opacity 0.5s ease-in-out;
-            -o-transition: opacity 0.5s ease-in-out;
-            transition: opacity 0.5s ease-in-out;
-        }
-
-        .teamTables:hover .minusButton{
-            opacity: 100;
-        }
-	</style>
-
-    <script>
-
-        var numTeamGroups = 3; //Including add div, so technically numTeamGroups-1 droppable groups.
-
-        $(document).ready(function(e) {
-
-			$('#randomize').click(function(e) {
-                randomize($('.names').children().length,numTeamGroups-1);
-            });
-
-            $("#plusButton").click(function(e){
-                if(numTeamGroups % 3 == 0 && numTeamGroups != 0) {
-                    $("<div class='teamTables "+(numTeamGroups)+"' ondrop='drop(event)' ondragover='allowDrop(event)'><img src='images/minus_button.png' class='minusButton mB"+(numTeamGroups)+"' alt='minus' height='25' width='25'></div>").insertBefore($("#teamAdd"));
-                    $("<br><br>").insertBefore($("#teamAdd"));
-                    numTeamGroups++;
-                }
-                else{
-                    $("<div class='teamTables "+(numTeamGroups)+"' ondrop='drop(event)' ondragover='allowDrop(event)'><img src='images/minus_button.png' class='minusButton mB"+(numTeamGroups)+"' alt='minus' height='25' width='25'></div>").insertBefore($("#teamAdd"));
-                    numTeamGroups++;
-                }
-
-                $(".minusButton").off();
-
-                $(".minusButton").on("click", function(e){
-                    var parent = $(this).parent();
-                    if (parent.find("div").length >= 1){
-                        fnOpenNormalDialog($(this));
-                    }
-                    else
-                    {
-                        confirmDeleteTeamTable($(this));
-                    }
-                });
-            });
-
-            $(".minusButton").on("click", function(e){
-                var parent = $(this).parent();
-                if (parent.find("div").length >= 1){
-                    fnOpenNormalDialog($(this));
-                }
-                else
-                {
-                    confirmDeleteTeamTable($(this));
-                }
-            });
-        });
-
-
-
-
-        function fnOpenNormalDialog(element) {
-            $("#dialog-confirm").html("Are you sure you want to delete this team box?<br>Subjects will be returned to spawn pool.");
-
-            // Define the Dialog and its properties.
-            $("#dialog-confirm").dialog({
-                resizable: false,
-                modal: true,
-                title: "Confirm delete",
-                height: 250,
-                width: 400,
-                buttons: {
-                    "Yes": function () {
-                        $(this).dialog('close');
-                        confirmDeleteTeamTable(element);
-                    },
-                    "No": function () {
-                        $(this).dialog('close');
-                    }
-                }
-            });
-        }
-
-        function confirmDeleteTeamTable(element)
-        {
-            var boxID = element.attr('class');
-            boxID = boxID.replace("minusButton mB", "");
-
-            numTeamGroups--;
-
-            $(".teams br").remove();
-
-            $("."+boxID).find("div").each(function(){
-                $(".names").append($(this));
-            });
-
-            $("."+boxID).remove();
-
-            var i = 0;
-            var fromHere = false;
-            $(".teams").find(".teamTables").each(function(){
-                i++;
-                if (i % 3 == 0)
-                {
-                    $("<br/><br/>").insertAfter($(this));
-                }
-
-                if ((i) == boxID)
-                    fromHere = true;
-
-                if (fromHere)
-                {
-                    $(this).removeClass((i+1).toString());
-                    $(this).addClass(boxID.toString());
-                    $(this).children(".minusButton").removeClass("mB"+(i+1).toString());
-                    $(this).children(".minusButton").addClass("mB"+boxID.toString());
-                    boxID++;
-                }
-            });
-        }
-	
-        function allowDrop(ev) {
-            ev.preventDefault();
-        }
-
-        function drag(ev) {
-            ev.dataTransfer.setData("text", ev.target.id);
-        }
-
-        function drop(ev) {
-            ev.preventDefault();
-            var data = ev.dataTransfer.getData("text");
-            ev.target.appendChild(document.getElementById(data));
-        }
-
-        $(function() {
-            $( "input[type=submit], a, button, input[type=file]" ).button();
-
-            $( "#dialog" ).dialog({
-                autoOpen: false,
-                width: 400,
-                buttons: [
-                    {
-                        text: "Ok",
-                        click: function() {
-                            $( this ).dialog( "close" );
-                        }
-                    }
-                ]
-            });;
-        });
-
-        if (window.File && window.FileReader && window.FileList && window.Blob) {
-            // Great success! All the File APIs are supported.
-        } else {
-            alert('The File APIs are not fully supported in this browser.');
-        }
-	
-    </script>
 </head>
 <body>
     <div class="header">
@@ -223,7 +50,7 @@
     <div id="dialog-confirm"></div>
 
 </body>
-<script src="scripts/inputCSV.js"></script>
+
 <script>
 </script>
 </html>
