Added Email Field to Sign Up

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -68,6 +68,10 @@
                             <td><input type="text" required/></td>
                         </tr>
                         <tr>
+                            <td>Email:</td>
+                            <td><input type="email" required/></td>
+                        </tr>
+                        <tr>
                             <td>Password:</td>
                             <td><input type="password" required/></td>
                         </tr>
