Added Project Setup page

--- a/src/views/projectSetup.html
+++ b/src/views/projectSetup.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="header">
-    <h2 class="headerMessages">Create or load Projects</h2>
+    <h2 class="headerMessages">Manage Projects</h2>
     <img id="logo" src="images/Storm.png" alt="STORM Logo" height="80" />
 
 </div>
@@ -20,7 +20,6 @@
 
     <div class="aboutWrapper">
         <div class="aboutUsText">
-            <h1> <u>Project Home</u></h1>
 
         </div>
     </div>
