--- a/src/views/projectSetup.html
+++ b/src/views/projectSetup.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<script>
+    //If not set, error dialog and return to login page
+   var user = JSON.parse(sessionStorage['User']);
+</script>
 <head lang="en">
     <meta charset="UTF-8">
     <title>STORM Projects</title>
