--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,6 +9,90 @@
     <link rel="stylesheet" href="style/css.css">
 
     <script>
+
+        function setCookie(cname, cvalue, exdays) {
+            var d = new Date();
+            d.setTime(d.getTime() + (exdays*24*60*60*1000));
+            var expires = "expires="+d.toUTCString();
+            document.cookie = cname + "=" + cvalue + "; " + expires;
+        }
+
+        function getCookie(cname) {
+            var name = cname + "=";
+            var ca = document.cookie.split(';');
+            for(var i=0; i<ca.length; i++) {
+                var c = ca[i];
+                while (c.charAt(0)==' ') c = c.substring(1);
+                if (c.indexOf(name) == 0) return c.substring(name.length, c.length);
+            }
+            return "";
+        }
+
+        $(document).ready(function(e) {
+            $("#loginForm").submit(function (event) {
+                event.preventDefault();
+
+                var $form = $(this),
+                        user = $form.find("input[name='username']").val(),
+                        pass = $form.find("input[name='password']").val();
+
+
+                $.ajax({
+                    type: "POST",
+                    url: '/login',
+                    data: {username: user},
+                    dataType: "json",
+                    success: function (dat, testStatus) {
+
+                        var data = JSON.stringify(dat);
+                        data = JSON.parse(data.substring(1,data.length-1));
+
+                        if(JSON.stringify(data) == "[]")
+                        {
+                            $("#loginUser").css("border-color", "red");
+                            $(".sign").effect('shake');
+
+                            //alert("not getting in bitch");
+                        }
+                        else
+                        if(data.password != pass)
+                        {
+                            $("#loginPass").css("border-color", "red");
+                            $(".sign").effect('shake');
+                        }
+                        else
+                        {
+
+                            sessionStorage['User'] = JSON.stringify(data);
+                            window.location.href = "/projectHome";
+                        }
+                        //alert(JSON.stringify(data));
+                    },
+
+                    error: function()
+                    {
+
+                        $("#errorDialog").html("An error has occured: <br> Could not connect to database");
+                        $("#errorDialog").dialog({
+                            resizable: false,
+                            modal: true,
+                            title: "Error",
+                            height: 250,
+                            width: 400,
+                            buttons: {
+                                "Fok, Ok": function () {
+                                    $(this).dialog('close');
+                                    confirmDeleteTeamTable(element);
+                                }
+                            }
+
+                        });
+                    }
+                });
+
+
+            });
+        });
         $.ajax({
             url: '/index', complete: function(data){
                 //alert(data);
@@ -38,15 +122,15 @@
         <div class="sign">
             <div class="signin">
                 <p class="signHeadings">Sign in</p>
-                <form action="teamSetup" method="GET">
+                <form id="loginForm">
                     <table class="signinTable">
                         <tr>
                             <td>Username:</td>
-                            <td><input type="text" required/></td>
+                            <td><input id="loginUser" name="username" type="text" required/></td>
                         </tr>
                         <tr>
                             <td>Password:</td>
-                            <td><input type="password" required/></td>
+                            <td><input id="loginPass" name="password" type="password" required/></td>
                         </tr>
                         <tr>
                             <td></td>
@@ -107,7 +191,7 @@
         </table>
     </div>
     </footer>
-
-
+</div>
+<div id="errorDialog"></div>
 </body>
 </html>
