--- a/src/views/projectSetup.html
+++ b/src/views/projectSetup.html
@@ -3,6 +3,7 @@
 <script>
     //If not set, error dialog and return to login page
    var user = JSON.parse(sessionStorage['User']);
+    var projects = user.projectID;
 </script>
 <head lang="en">
     <meta charset="UTF-8">
