Added move back button

--- a/src/public/Style/css.css
+++ b/src/public/Style/css.css
@@ -365,14 +365,35 @@ section {
     float:right;
     opacity: 0;
 
-    -webkit-transition: opacity 0.5s ease-in-out;
-    -moz-transition: opacity 0.5s ease-in-out;
-    -ms-transition: opacity 0.5s ease-in-out;
-    -o-transition: opacity 0.5s ease-in-out;
-    transition: opacity 0.5s ease-in-out;
+    -webkit-transition: opacity 0.1s ease-in-out;
+    -moz-transition: opacity 0.1s ease-in-out;
+    -ms-transition: opacity 0.1s ease-in-out;
+    -o-transition: opacity 0.1s ease-in-out;
+    transition: opacity 0.1s ease-in-out;
+}
+
+.leftArrow{
+    float:right;
+    right:5px;
+    top:0px;
+
+
+    opacity: 0;
+
+    position:relative;
+
+    -webkit-transition: opacity 0.1s ease-in-out;
+    -moz-transition: opacity 0.1s ease-in-out;
+    -ms-transition: opacity 0.1s ease-in-out;
+    -o-transition: opacity 0.1s ease-in-out;
+    transition: opacity 0.1s ease-in-out;
 }
 
 .teamTables:hover .minusButton{
+    opacity: 100;
+}
+
+.teamTables:hover .leftArrow{
     opacity: 100;
 }
 
