--- a/src/views/teamSetup.html
+++ b/src/views/teamSetup.html
@@ -41,8 +41,8 @@
             <div class="teams">
 
 
-                <div class="teamTables 1" ondrop="drop(event)" ondragover="allowDrop(event)"><img src="images/minus_button.png" class="minusButton mB1" alt="plus" height="25" width="25"></div>
-                <div class="teamTables 2" ondrop="drop(event)" ondragover="allowDrop(event)"><img src="images/minus_button.png" class="minusButton mB2" alt="plus" height="25" width="25"></div>
+                <div class="teamTables 1" ondrop="drop(event)" ondragover="allowDrop(event)"><img src="images/minus_button.png" class="minusButton mB1" alt="plus" height="25" width="25"><img src="images/left_arrow.png" class="leftArrow lA1" alt="move back" height="25" width="25"><br></div>
+                <div class="teamTables 2" ondrop="drop(event)" ondragover="allowDrop(event)"><img src="images/minus_button.png" class="minusButton mB2" alt="plus" height="25" width="25"><img src="images/left_arrow.png" class="leftArrow lA2" alt="move back" height="25" width="25"></div>
                 <div class="teamAdd" id="teamAdd" ondrop="drop(event)"><img src="images/plus_button.png" id="plusButton" alt="plus" height="42" width="42"></div>
             </div>
         </div>
