--- a/src/views/index.html
+++ b/src/views/index.html
@@ -43,7 +43,7 @@
                     data: {username: user},
                     dataType: "json",
                     success: function (dat, testStatus) {
-
+                        //alert(JSON.stringify(dat));
                         var data = JSON.stringify(dat);
                         data = JSON.parse(data.substring(1,data.length-1));
 
@@ -60,7 +60,6 @@
                         }
                         else
                         {
-
                             sessionStorage['User'] = JSON.stringify(data);
                             window.location.href = "/projectHome";
                         }
@@ -77,7 +76,7 @@
                             height: 250,
                             width: 400,
                             buttons: {
-                                "Fok, Ok": function () {
+                                "Ok": function () {
                                     $(this).dialog('close');
                                     confirmDeleteTeamTable(element);
                                 }
