--- a/src/views/projectSetup.html
+++ b/src/views/projectSetup.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
-<script>
-    //If not set, error dialog and return to login page
-   var user = JSON.parse(sessionStorage['User']);
-    var projects = user.projectID;
-</script>
+
 <head lang="en">
     <meta charset="UTF-8">
     <title>STORM Projects</title>
+
     <link rel="stylesheet" href="style/css.css">
+    <link rel="stylesheet" href="APIs/jquery-ui-1.11.4.custom/jquery-ui.min.css">
+    <script src="APIs/jquery-ui-1.11.4.custom/external/jquery/jquery.js"></script>
+    <script src="APIs/jquery-ui-1.11.4.custom/jquery-ui.min.js"></script>
+
+    <script>
+        //If not set, error dialog and return to login page
+        var user = sessionStorage['User'];
+        var projects = user.projectID;
+
+        $(document).ready(function(e) {
+            alert(user);
+        });
+
+    </script>
 </head>
 <body>
 <div class="header">
